package fr.isima.master1.genielog.featureflipping.domain;

public class Role {

    public final String name = null;

    public Role(String name) {
    }
}
