package fr.isima.master1.genielog.featureflipping.domain;

public class UserRoles {
    public boolean contains(Role role) {
        return false;
    }

    public static UserRoles of(Role ... roles) {
        return null;
    }


    public static UserRoles of(String ... roleNames) {
        return null;
    }
}
